--- a/src/lib/shelf/grid-fields/style/gf-it-field.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-field.scss
@@ -1,7 +1,9 @@
 .ti-grid-fiels-item.part-field {
   @include colorized;
-  display: grid;
-  row-gap: var(--ti-gap-t);
+  & {
+    display: grid;
+    row-gap: var(--ti-gap-t);
+  }
   //-------------------------------------------------------------
   &.is-disabled {
     position: relative;
@@ -10,7 +12,7 @@
     opacity: 0.7;
     &::after {
       display: block;
-      content: "";
+      content: '';
       position: absolute;
       inset: 0;
       z-index: 1;
@@ -18,7 +20,7 @@
   }
   //-------------------------------------------------------------
   @mixin __data_align($align, $jc) {
-    &[data-align="#{$align}"] {
+    &[data-align='#{$align}'] {
       justify-content: $jc;
     }
   }
@@ -33,10 +35,10 @@
     @include __data_align(justify, space-between);
     @include __data_align(start, flex-start);
     @include __data_align(end, flex-end);
-    &[data-align="start"] {
+    &[data-align='start'] {
       text-align: start;
     }
-    &[data-align="end"] {
+    &[data-align='end'] {
       text-align: end;
     }
     //-----------------------------------------------------------
