--- a/src/lib/shelf/grid-fields/style/gf-it-field.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-field.scss
@@ -48,6 +48,7 @@
       flex-wrap: nowrap;
       align-items: stretch;
       align-content: center;
+      transition: color 1s, background-color 1s;
       > .as-snippet-text .required-mark {
         @include font-fixed;
         color: var(--ti-color-danger);
