--- a/src/lib/edit/code/ti-code-editor.scss
+++ b/src/lib/edit/code/ti-code-editor.scss
@@ -1,6 +1,22 @@
 .ti-code-editor {
-  position: relative;
   width: 100%;
   height: 100%;
+  min-width: 200px;
+  min-height: 100px;
+  //---------------------------------------
+  > .editor-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    //---------------------------------------
+    > aside {
+      @include pos-abs($t:0,$r:0);
+      background-color: #CCC;
+      color:#000;
+      padding: .5em;
+
+    }
+    //---------------------------------------
+  } // > .editor-wrapper
   //---------------------------------------
 }
