--- a/src/lib/action/tabs/ti-tabs.scss
+++ b/src/lib/action/tabs/ti-tabs.scss
@@ -22,6 +22,7 @@
       > span {
         display: block;
         white-space: nowrap;
+        line-height: 1em;
         &.as-icon {
           margin: 0 auto;
         }
@@ -30,10 +31,9 @@
         }
       }
       &.wrap-content {
-        flex-wrap: wrap;
         > span {
           white-space: break-spaces;
-          text-align: justify;
+          text-align: left;
         }
       }
     }
@@ -80,23 +80,23 @@
   //....................................
   // Label space
   &.tab-item-space-h > ul > li {
-    padding: 0.3em 1em 0.3em 1em;
+    padding: 0.6em 1em 0.6em 1em;
     font-size: 1.5em;
   }
   &.tab-item-space-b > ul > li {
-    padding: 0.3em 1em 0.3em 1em;
+    padding: 0.6em 1em 0.6em 1em;
     font-size: 1.2em;
   }
   &.tab-item-space-m > ul > li {
-    padding: 0.2em 1em 0.2em 1em;
+    padding: 0.6em 1em 0.6em 1em;
     font-size: 1.1em;
   }
   &.tab-item-space-s > ul > li {
-    padding: 0.1em 0.5em 0.1em 0.5em;
+    padding: 0.6em 1em 0.6em 1em;
     font-size: 1em;
   }
   &.tab-item-space-t > ul > li {
-    padding: 0.1em 0.5em 0.1em 0.5em;
+    padding: 0.6em 1em 0.6em 1em;
     font-size: 0.8em;
   }
   //....................................
