--- a/src/lib/action/tabs/ti-tabs.scss
+++ b/src/lib/action/tabs/ti-tabs.scss
@@ -7,8 +7,6 @@
   $SCW: 24px;
   //....................................
   > .tab-items-con {
-    @include flex-align-nowrap($ai: stretch);
-    list-style: none;
     user-select: none;
     padding: 0;
     margin: 0;
@@ -16,32 +14,37 @@
     overflow: hidden;
     scroll-behavior: smooth;
     //..................................
-    > .tab-item {
-      @include flex-align-nowrap;
-      cursor: pointer;
-      margin: 0 4px;
-      color: var(--ti-color-track);
-      border: 1px solid transparent;
-      > span {
-        display: block;
-        white-space: nowrap;
-        line-height: 1em;
-        &.as-icon {
-          margin: 0 auto;
-        }
-        &.as-text {
-          padding: 0 0.5em;
-        }
-      }
-      &.wrap-content {
+    > .items-wrapper {
+      @include flex-align-nowrap($ai: stretch);
+      //..................................
+      > .tab-item {
+        @include flex-align-nowrap;
+        cursor: pointer;
+        margin: 0 4px;
+        color: var(--ti-color-track);
+        border: 1px solid transparent;
         > span {
-          white-space: break-spaces;
-          text-align: left;
+          display: block;
+          white-space: nowrap;
+          line-height: 1em;
+          &.as-icon {
+            margin: 0 auto;
+          }
+          &.as-text {
+            padding: 0 0.5em;
+          }
         }
-      }
-    }
+        &.wrap-content {
+          > span {
+            white-space: break-spaces;
+            text-align: left;
+          }
+        }
+      } //  > .tab-item
+      //..................................
+    } // > .items-wrapper
     //..................................
-    > .tab-item.is-current {
+    > .items-wrapper > .tab-item.is-current {
       background-color: var(--ti-color-menu);
       color: var(--ti-color-menu-r);
       border-color: var(--ti-color-border-shallow);
@@ -69,36 +72,40 @@
         background-color: var(--ti-color-primary-r);
       }
       &.to-left {
-        border-right: 1px solid var(--ti-color-border-shallow);
-        box-shadow: 3px 0px 3px var(--ti-color-mask-thin);
-        //border-radius: var(--ti-measure-r-m) 0 0 var(--ti-measure-r-m);
+        border-right: 1px solid var(--ti-color-menu);
+        &:hover {
+          box-shadow: 3px 0px 3px var(--ti-color-mask-thin);
+          //border-radius: var(--ti-measure-r-m) 0 0 var(--ti-measure-r-m);
+        }
       }
       &.to-right {
-        border-left: 1px solid var(--ti-color-border-shallow);
-        box-shadow: -3px 0px 3px var(--ti-color-mask-thin);
-        //border-radius: 0 var(--ti-measure-r-m) var(--ti-measure-r-m) 0;
+        border-left: 1px solid var(--ti-color-menu);
+        &:hover {
+          box-shadow: -3px 0px 3px var(--ti-color-mask-thin);
+          //border-radius: 0 var(--ti-measure-r-m) var(--ti-measure-r-m) 0;
+        }
       }
     }
   }
   //....................................
   // Label space
-  &.tab-item-space-h > .tab-items-con > .tab-item {
+  &.tab-item-space-h > .tab-items-con > .items-wrapper > .tab-item {
     padding: 0.6em 1em 0.6em 1em;
     font-size: 1.5em;
   }
-  &.tab-item-space-b > .tab-items-con > .tab-item {
+  &.tab-item-space-b > .tab-items-con > .items-wrapper > .tab-item {
     padding: 0.6em 1em 0.6em 1em;
     font-size: 1.2em;
   }
-  &.tab-item-space-m > .tab-items-con > .tab-item {
+  &.tab-item-space-m > .tab-items-con > .items-wrapper > .tab-item {
     padding: 0.6em 1em 0.6em 1em;
     font-size: 1.1em;
   }
-  &.tab-item-space-s > .tab-items-con > .tab-item {
+  &.tab-item-space-s > .tab-items-con > .items-wrapper > .tab-item {
     padding: 0.6em 1em 0.6em 1em;
     font-size: 1em;
   }
-  &.tab-item-space-t > .tab-items-con > .tab-item {
+  &.tab-item-space-t > .tab-items-con > .items-wrapper > .tab-item {
     padding: 0.6em 1em 0.6em 1em;
     font-size: 0.8em;
   }
@@ -119,7 +126,7 @@
   &.tabs-at-top {
     padding: 1em $SCW 0 $SCW;
     border-bottom: 1px solid var(--ti-color-border-shallow);
-    > .tab-items-con > .tab-item {
+    > .tab-items-con > .items-wrapper > .tab-item {
       border-top: $R solid transparent;
       border-bottom: 0;
       border-radius: $R $R 0 0;
@@ -133,7 +140,7 @@
   &.tabs-at-bottom {
     padding: 0 $SCW 1em $SCW;
     border-top: 1px solid var(--ti-color-border-shallow);
-    > .tab-items-con > .tab-item {
+    > .tab-items-con > .items-wrapper > .tab-item {
       border-bottom: $R solid transparent;
       border-top: 0;
       border-radius: 0 0 $R $R;
@@ -145,7 +152,7 @@
     }
   }
   //....................................
-  &.wrap-tabs > .tab-items-con {
+  &.wrap-tabs > .tab-items-con > .items-wrapper {
     flex-wrap: wrap;
   }
   //....................................
