--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --bunya-grid-gap: 10px;
 }
 
 h1 {
