--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -26,8 +26,8 @@
   /* 选择/高亮 */
   --ti-color-selected: rgba(255, 255, 0, 0.2);
   --ti-color-selected-f: #ff0;
-  --ti-color-hightlight: rgba(255, 255, 0, 0.1);
-  --ti-color-hightlight-f: #fff;
+  --ti-color-highlight: rgba(255, 255, 0, 0.1);
+  --ti-color-highlight-f: #fff;
   --ti-color-light: #567;
   --ti-color-dark: #000;
   /* 内容颜色 */
