--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -26,8 +26,8 @@
   /* 选择/高亮 */
   --ti-color-selected: #def;
   --ti-color-selected-f: #000;
-  --ti-color-hightlight: rgba(255, 255, 0, 0.2);
-  --ti-color-hightlight-f: #000;
+  --ti-color-highlight: rgba(255, 255, 0, 0.2);
+  --ti-color-highlight-f: #000;
   --ti-color-light: #fff;
   --ti-color-dark: #b8b8b8;
   /* 内容颜色 */
