--- a/src/assets/style/feature/transition.scss
+++ b/src/assets/style/feature/transition.scss
@@ -168,7 +168,7 @@
 //
 /*------------------------------------*/
 .ti-trans {
-  background-color: red;
+  //background-color: red;
   /*------------------------------------*/
   &.speed-slow {
     transition-duration: 0.8s;
