--- a/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
+++ b/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
@@ -5,7 +5,7 @@
   &.fixed-footer {
     @include flex-align-v-nowrap;
   }
-  
+
   //-------------------------------------------------------------
   > .part-empty-tip {
     width: 100%;
@@ -85,11 +85,11 @@
       font-size: var(--ti-fontsz-#{$sz});
     }
   }
-  @include __aspect_fontsz("t");
-  @include __aspect_fontsz("s");
-  @include __aspect_fontsz("m");
-  @include __aspect_fontsz("b");
-  @include __aspect_fontsz("h");
+  @include __aspect_fontsz('t');
+  @include __aspect_fontsz('s');
+  @include __aspect_fontsz('m');
+  @include __aspect_fontsz('b');
+  @include __aspect_fontsz('h');
 
   //-------------------------------------------------------------
   @mixin __aspect_body_gap($sz) {
@@ -105,9 +105,22 @@
       }
     }
   }
-  @include __aspect_body_gap("t");
-  @include __aspect_body_gap("s");
-  @include __aspect_body_gap("m");
-  @include __aspect_body_gap("b");
-  @include __aspect_body_gap("h");
+  @include __aspect_body_gap('t');
+  @include __aspect_body_gap('s');
+  @include __aspect_body_gap('m');
+  @include __aspect_body_gap('b');
+  @include __aspect_body_gap('h');
+  //-------------------------------------------------------------
+  &.no-body-padding {
+    padding: 0;
+    &.body-gap-t,
+    &.body-gap-s,
+    &.body-gap-m,
+    &.body-gap-b,
+    &.body-gap-h {
+      > .part-body {
+        padding: 0;
+      }
+    }
+  }
 }
