--- a/src/lib/shelf/block/ti-block.scss
+++ b/src/lib/shelf/block/ti-block.scss
@@ -1,5 +1,6 @@
 .ti-block {
   display: grid;
+  //-----------------------------------------------------------
   > header {
     @include flex-align-nowrap($ai: stretch);
     font-size: var(--ti-fontsz-block-head);
@@ -21,11 +22,27 @@
       padding: SZ(4);
     }
   } // > header
-
-  > main {
-    position: relative;
-    overflow: hidden;
+  //-----------------------------------------------------------
+  > .block-main-body-wrapper {
+    > main {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
   }
+  //-----------------------------------------------------------
+  &.overflow-cover > .block-main-body-wrapper {
+    overflow: hidden;
+    position: relative;
+    > main {
+      position: absolute;
+      inset: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  //-----------------------------------------------------------
 }
 
 //-------------------------------------------------------------
@@ -37,12 +54,10 @@
 
       // 标题菜单组，顶级项目反色
       > .ti-actionbar > .bar-top-group {
-        > .bar-item[item-depth="0"] > .bar-item-head {
+        > .bar-item[item-depth='0'] > .bar-item-head {
           color: inherit;
           background-color: inherit;
-          transition:
-            background-color 0.5s,
-            color 0.3s;
+          transition: background-color 0.5s, color 0.3s;
           &:hover {
             color: var(--ti-color-#{$name});
             background-color: var(--ti-color-#{$name}-r);
