--- a/src/lib/shelf/grid-fields/style/gf-it-label.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-label.scss
@@ -1,5 +1,12 @@
 .ti-grid-fiels-item.part-label {
-  background-color: var(--ti-color-border-shallow);
-  padding: var(--ti-gap-s) var(--ti-gap-m);
-  border-radius: var(--ti-measure-r-s);
+  &.as-info-box {
+    background-color: var(--ti-color-border-shallow);
+    padding: var(--ti-gap-s) var(--ti-gap-m);
+    border-radius: var(--ti-measure-r-s);
+  }
+  &.as-sep-line {
+    height: 0;
+    border-bottom: 1px solid var(--ti-color-border-shallow);
+    margin: 0.6em 0;
+  }
 }
