--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -1,6 +1,6 @@
 @mixin use_color_theme_light {
   /*区域*/
-  --ti-color-body: #eee;
+  --ti-color-body: #f0f0f0;
   --ti-color-body-f: #000;
   --ti-color-card: #fff;
   --ti-color-card-f: #000;
