--- a/src/lib/shelf/layout/grid/style/ti-layout-grid.scss
+++ b/src/lib/shelf/layout/grid/style/ti-layout-grid.scss
@@ -38,11 +38,10 @@
     > .grid-item > .grid-item-con {
       background-color: var(--ti-color-card);
       overflow: hidden;
-      box-shadow: 1px 1px 3px var(--ti-color-mask-weak);
     }
 
-    &.with-shadown {
-      box-shadow: 2px 2px 6px var(--ti-color-mask-weak);
+    &.with-shadown > .grid-item > .grid-item-con {
+      box-shadow: 1px 1px 3px var(--ti-color-mask-weak);
     }
 
     &.r-b > .grid-item > .grid-item-con {
