--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -1,9 +1,7 @@
 //-------------------------- font
-$f_fixed:
-  Monaco,
-  Consolas,
-  Courier New;
-$f_nice: "Microsoft YaHei", "PingHei", "Helvetica Neue", "Helvetica", "Arial", "Verdana", "sans-serif";
+$f_fixed: Monaco, Consolas, Courier New;
+$f_nice: 'Microsoft YaHei', 'PingHei', 'Helvetica Neue', 'Helvetica', 'Arial',
+  'Verdana', 'sans-serif';
 //-------------------------- zIndex
 $z-above: 1;
 $z-cover: 10;
@@ -94,7 +92,13 @@ $BARLINE: 1px;
 @mixin flex-center($jc: center, $ai: center, $wp: wrap, $ac: center) {
   @include flex($jc, $ai, $wp, $ac);
 }
-@mixin flex-full($fx: 1 1 auto, $jc: center, $ai: stretch, $wp: nowrap, $ac: stretch) {
+@mixin flex-full(
+  $fx: 1 1 auto,
+  $jc: center,
+  $ai: stretch,
+  $wp: nowrap,
+  $ac: stretch
+) {
   @include flex($jc, $ai, $wp, $ac);
   flex: $fx;
 }
@@ -108,14 +112,24 @@ $BARLINE: 1px;
 @mixin flex-align-center($jc: flex-start, $ai: center, $wp: wrap, $ac: center) {
   @include flex($jc, $ai, $wp, $ac);
 }
-@mixin flex-align-nowrap($jc: flex-start, $ai: center, $wp: nowrap, $ac: center) {
+@mixin flex-align-nowrap(
+  $jc: flex-start,
+  $ai: center,
+  $wp: nowrap,
+  $ac: center
+) {
   @include flex($jc, $ai, $wp, $ac);
 }
 @mixin flex-align-v($jc: flex-start, $ai: stretch, $wp: wrap, $ac: stretch) {
   @include flex($jc, $ai, $wp, $ac);
   flex-direction: column;
 }
-@mixin flex-align-v-nowrap($jc: flex-start, $ai: stretch, $wp: nowrap, $ac: stretch) {
+@mixin flex-align-v-nowrap(
+  $jc: flex-start,
+  $ai: stretch,
+  $wp: nowrap,
+  $ac: stretch
+) {
   @include flex($jc, $ai, $wp, $ac);
   flex-direction: column;
 }
@@ -209,14 +223,30 @@ $BARLINE: 1px;
 //          其他帮助方法
 //
 //-------------------------------------------------------------
-@mixin bg-chessboard($sz: SZ(20), $color: var(--ti-color-border-shallow), $bg: var(--ti-color-card)) {
+@mixin bg-chessboard(
+  $sz: SZ(20),
+  $color: var(--ti-color-border-shallow),
+  $bg: var(--ti-color-card)
+) {
   background-color: $bg;
-  background-image: linear-gradient(45deg, $color 25%, transparent 25%, transparent 75%, $color 75%, $color),
-    linear-gradient(45deg, $color 26%, transparent 26%, transparent 74%, $color 74%, $color);
+  background-image: linear-gradient(
+      45deg,
+      $color 25%,
+      transparent 25%,
+      transparent 75%,
+      $color 75%,
+      $color
+    ),
+    linear-gradient(
+      45deg,
+      $color 26%,
+      transparent 26%,
+      transparent 74%,
+      $color 74%,
+      $color
+    );
   background-size: $sz $sz;
-  background-position:
-    0 0,
-    calc($sz/2) calc($sz/2);
+  background-position: 0 0, calc($sz/2) calc($sz/2);
 }
 //-------------------------------------------------------------
 @mixin __color_by_name($name) {
@@ -250,13 +280,13 @@ $BARLINE: 1px;
 }
 
 //-------------------------------------------------------------
-@mixin __fontsz($prefix, $sz, $suffix: "") {
+@mixin __fontsz($prefix, $sz, $suffix: '') {
   #{$prefix}-#{$sz} #{$suffix} {
     font-size: var(--ti-fontsz-#{$sz});
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_fontsize($prefix, $suffix: "") {
+@mixin aspect_fontsize($prefix, $suffix: '') {
   @include __fontsz($prefix, t, $suffix);
   @include __fontsz($prefix, s, $suffix);
   @include __fontsz($prefix, m, $suffix);
@@ -265,13 +295,13 @@ $BARLINE: 1px;
 }
 
 //-------------------------------------------------------------
-@mixin __gap($prefix, $sz, $suffix: "") {
+@mixin __gap($prefix, $sz, $suffix: '') {
   #{$prefix}-#{$sz} #{$suffix} {
     gap: var(--ti-gap-#{$sz});
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_gap($prefix, $suffix: "") {
+@mixin aspect_gap($prefix, $suffix: '') {
   @include __gap($prefix, t, $suffix);
   @include __gap($prefix, s, $suffix);
   @include __gap($prefix, m, $suffix);
@@ -280,13 +310,13 @@ $BARLINE: 1px;
 }
 
 //-------------------------------------------------------------
-@mixin __pad($prefix, $sz, $suffix: "") {
+@mixin __pad($prefix, $sz, $suffix: '') {
   #{$prefix}-#{$sz} #{$suffix} {
     padding: var(--ti-gap-#{$sz});
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_pad($prefix, $suffix: "") {
+@mixin aspect_pad($prefix, $suffix: '') {
   @include __pad($prefix, t, $suffix);
   @include __pad($prefix, s, $suffix);
   @include __pad($prefix, m, $suffix);
@@ -295,13 +325,13 @@ $BARLINE: 1px;
 }
 
 //-------------------------------------------------------------
-@mixin __radius($prefix, $sz, $suffix: "") {
+@mixin __radius($prefix, $sz, $suffix: '') {
   #{$prefix}-#{$sz} #{$suffix} {
     border-radius: var(--ti-measure-r-#{$sz});
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_radius($prefix, $suffix: "") {
+@mixin aspect_radius($prefix, $suffix: '') {
   @include __radius($prefix, t, $suffix);
   @include __radius($prefix, s, $suffix);
   @include __radius($prefix, m, $suffix);
@@ -320,7 +350,7 @@ $BARLINE: 1px;
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_color($prefix: "&.is") {
+@mixin aspect_color($prefix: '&.is') {
   @include __color(success, $prefix);
   @include __color(warn, $prefix);
   @include __color(info, $prefix);
@@ -339,7 +369,7 @@ $BARLINE: 1px;
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_color_fborder($prefix: "&.is") {
+@mixin aspect_color_fborder($prefix: '&.is') {
   @include __color_fborder(success, $prefix);
   @include __color_fborder(warn, $prefix);
   @include __color_fborder(info, $prefix);
@@ -349,4 +379,5 @@ $BARLINE: 1px;
   @include __color_fborder(text, $prefix);
   @include __color_fborder(number, $prefix);
 }
+
 //-------------------------------------------------------------
