--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -43,9 +43,9 @@
   --ti-color-warn: #ff8800;
   --ti-color-warn-b: #ec8f23;
   --ti-color-warn-r: #ffc;
-  --ti-color-info: #2196f3;
-  --ti-color-info-b: #3c9be9;
-  --ti-color-info-r: #fff;
+  --ti-color-info: #00bfbf;
+  --ti-color-info-b: #15cece;
+  --ti-color-info-r: #aefcfc;
   --ti-color-danger: #f44336;
   --ti-color-danger-b: #e9574d;
   --ti-color-danger-r: #fcc;
@@ -55,10 +55,10 @@
   --ti-color-disable: #999;
   --ti-color-disable-b: #adadad;
   --ti-color-disable-r: #ccc;
-  --ti-color-text: #008800;
-  --ti-color-text-b: #0f9c0f;
-  --ti-color-text-r: #fff;
-  --ti-color-number: #0088ff;
-  --ti-color-number-b: #2788dd;
-  --ti-color-number-r: #fff;
+  --ti-color-text: #a25791;
+  --ti-color-text-b: #bd7aad;
+  --ti-color-text-r: #ecc4e3;
+  --ti-color-number: #7200cc;
+  --ti-color-number-b: #8520d3;
+  --ti-color-number-r: #cb9fec;
 }
