--- a/src/lib/tile/progress-bar/progress-bar.scss
+++ b/src/lib/tile/progress-bar/progress-bar.scss
@@ -1,5 +1,5 @@
 .ti-progress-bar {
-  @include flex-align-nowrap($ai: stretch);
+  user-select: none;
   width: 100%;
   height: 100%;
   position: relative;
@@ -7,10 +7,14 @@
   // 轨道
   //-----------------------------------------------
   .bar-track {
-    position: relative;
     margin: auto;
     background-color: var(--ti-color-card);
     border: 1px solid var(--ti-color-border-dark);
+    > .track-con {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
   }
   //-----------------------------------------------
   // 进度指示器
@@ -24,6 +28,7 @@
   // 水平进度条
   //-----------------------------------------------
   &[bar-mode='H'] {
+    @include flex-align-nowrap($ai: stretch);
     .bar-indicator {
       right: unset;
       transition: width 0.6s;
@@ -34,11 +39,44 @@
   // 垂直进度条
   //-----------------------------------------------
   &[bar-mode='V'] {
+    @include flex-align-v-nowrap($ai: stretch);
     .bar-indicator {
       top: unset;
       transition: height 0.6s;
     }
   } //  &[bar-mode='V']
+  //-----------------------------------------------
+  // Tip 的位置
+  //-----------------------------------------------
+  $tsw: var(--ti-color-box);
+  .bar-tip {
+    @include flex-center;
+    text-shadow: -1px -1px 0 $tsw, 1px -1px 0 $tsw, -1px 1px 0 $tsw,
+      1px 1px 0 $tsw; 
+    font-size: 14px;
+    //---------------------------------------------
+    &[tip-at='top'] {
+      order: -1;
+    }
+    //---------------------------------------------
+    &[tip-at='center'] {
+      position: absolute;
+      inset: 0;
+    }
+    //---------------------------------------------
+    &[tip-at='left'] {
+      position: absolute;
+      inset: 0;
+      justify-content: flex-start;
+    }
+    //---------------------------------------------
+    &[tip-at='right'] {
+      position: absolute;
+      inset: 0;
+      justify-content: flex-end;
+    }
+    //---------------------------------------------
+  }
 
   //-----------------------------------------------
   // 主题颜色
