rough table header tip

--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -6,10 +6,10 @@
   --ti-color-card-f: #eee;
   --ti-color-menu: #222;
   --ti-color-menu-f: #eee;
-  --ti-color-bar: rgba(50, 50, 50, 0.6);
-  --ti-color-bar-f: #666;
+  --ti-color-bar: #111;
+  --ti-color-bar-f: #ddd;
   --ti-color-tab: #333;
-  --ti-color-tab-f: #666;
+  --ti-color-tab-f: #ddd;
   --ti-color-box: #000;
   --ti-color-box-f: #eee;
   --ti-color-mask-heavy: rgba(0, 0, 0, 0.9);
@@ -52,9 +52,9 @@
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
-  --ti-color-disable: #999;
-  --ti-color-disable-b: #adadad;
-  --ti-color-disable-r: #ccc;
+  --ti-color-disable: rgba(200, 200, 200, 0.1);
+  --ti-color-disable-b: rgba(200, 200, 200, 0.2);
+  --ti-color-disable-r: #aaa;
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
   --ti-color-text-r: #ecc4e3;
