--- a/src/lib/shelf/layout/grid/style/ti-layout-grid.scss
+++ b/src/lib/shelf/layout/grid/style/ti-layout-grid.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  position: relative;
+  //position: relative;
 
   &.cover-parent,
   &.fit-parent {
