--- a/src/lib/view/list/ti-list.scss
+++ b/src/lib/view/list/ti-list.scss
@@ -47,6 +47,25 @@
           line-height: 1.2em;
           em {
             font-style: normal;
+            flex: 1 1 auto;
+          }
+          abbr {
+            font-size: 0.8em;
+            opacity: 0.62;
+          }
+          div {
+            @include flex-align;
+          }
+          div.new-row {
+            width: 100%;
+          }
+          .as-tag {
+            font-size: 10px;
+            display: block;
+            padding: 0 0.5em;
+            line-height: 1.5em;
+            background-color: var(--ti-color-mask-thin);
+            border-radius: var(--ti-measure-r-s);
           }
         }
         //----------------------------
@@ -126,3 +145,46 @@
   }
   //--------------------------------
 }
+
+@mixin __li_color($name) {
+  .ti-list > main > .list-item.is-#{$name} {
+    color: var(--ti-color-#{$name});
+
+    &.is-checked {
+      color: var(--ti-color-#{$name});
+      background-color: var(--ti-color-#{$name}-r);
+    }
+
+    > .list-part.as-text .as-tag {
+      color: var(--ti-color-#{$name}-r);
+      background-color: var(--ti-color-#{$name});
+    }
+  }
+  .ti-list.is-selectable > main {
+    > .list-item.is-#{$name} {
+      &.is-current {
+        border-left-color: var(--ti-color-#{$name});
+        &:hover {
+          color: var(--ti-color-#{$name}-b);
+          background-color: var(--ti-color-#{$name}-r);
+        }
+      }
+    }
+  }
+}
+
+@mixin __li_colorized() {
+  @include __li_color(success);
+  @include __li_color(warn);
+  @include __li_color(info);
+  @include __li_color(danger);
+  @include __li_color(track);
+  @include __li_color(disable);
+  @include __li_color(text);
+  @include __li_color(number);
+  @include __li_color(primary);
+  @include __li_color(secondary);
+}
+
+// 为列表项添加颜色
+@include __li_colorized();
